first part done

--- a/index.html
+++ b/index.html
@@ -6,10 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>this is atkiya fairuz</h1>
+
+    <div id="first-sight">
+
+        <div class="half-width">
+            <h1><span class="red-color">Skip</span> The Diet,<br>Just Eat Healthy<br> With Food Network<br> </h1>
+
+
+
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you!! If you want to
+                know
+                more
+                about healthy food then click below. </p>
+
+            <a class="link-button" href="https://www.verywellfit.com/reasons-to-eat-right-2507100">Click Me</a>
+        </div>
+
+
+        <div class="half-width">
+            <img src="images/assi-pic01.png" alt="">
+
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
