--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you!! If you want to
                 know
                 more
-                about healthy food then click below. </p>
+                about healthy food then click below. </p><br>
 
             <a class="link-button" href="https://www.verywellfit.com/reasons-to-eat-right-2507100">Click Me</a>
         </div>
@@ -34,6 +34,30 @@
 
         </div>
     </div>
+
+
+
+    <section>
+
+        <div class="about-me">
+            <img src="images/assi-pic02.png" width="1090px" height="400px" alt="">
+
+            <div class="centered">
+                <h2>About Me</h2>
+                <p>This is Atkiya Fairuz,I'm a student of Eastern University.I think, Eating a healthy, balanced diet
+                    doesn't need to be complicated—or restrictive. Start by choosing a variety of foods from
+                    all the major food groups, including fruits and vegetables, lean proteins, dairy products, grains
+                    and cereals, and good
+                    oils and fats.</p><br>
+
+                <a class="link-button" href="https://www.facebook.com/atkiya.fairuz">Contact Me</a>
+            </div>
+
+        </div>
+
+
+
+    </section>
 
 
 
