--- a/index.html
+++ b/index.html
@@ -59,6 +59,43 @@
 
     </section>
 
+    <div class="my-recipe">
+        <h2>My Recipes</h2>
+        <p>I will provide some healthy recipes which are good for health.Eating too much is harmful for your health.We
+            should not take too much carbohydrate in our daily food menu.If we get more knowledge about healthy food
+            then
+            we can cook it easily. </p>
+    </div>
+
+
+
+    <section class="healthy-recipes">
+        <div class="recipe-title">
+
+            <img src="images/assi-pic03.png" alt="">
+            <h3>Vegetable Salad</h3>
+            <p>For making this we will need some fresh vegetables.Like
+                tomatoes,spinach,carrot,cucumber.
+                Clean all vegetables then chop it into
+                pieces and take a fry pan on the stove,put some vegetable oil and then add the chopped vegetables and
+                salt.You can add some chilli flex for taste.Then serve it into a bowl.
+            </p>
+        </div>
+        <div class="recipe-title">
+            <img src="images/assi-pic06.jpg" alt="">
+            <h3>Fruit Salad</h3>
+            <p>It is one of the easiest food recipe,you can take some seasonal fruits.Then chopped it into pieces.Then
+                take it with himalayan pink salt.But remember don't take sugary fruits too much.Sugar will increase your
+                weight.So avoid it.</p>
+        </div>
+        <div class="recipe-title">
+            <img src="images/assi-pic05.png" alt="">
+            <h3>Lentil Soup</h3>
+            <p>It is one of the best resource of organic protein.Take a pan then add water,vegetable oil,turmeric,chilli
+                flex,salt and clean lentil.Then boil it for 10 mininutes.So,your healthy food is ready.</p>
+        </div>
+    </section>
+
 
 
 
