--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
 
-    </section>
+    </section><br>
 
     <div class="my-recipe">
         <h2>My Recipes</h2>
@@ -78,7 +78,7 @@
                 tomatoes,spinach,carrot,cucumber.
                 Clean all vegetables then chop it into
                 pieces and take a fry pan on the stove,put some vegetable oil and then add the chopped vegetables and
-                salt.You can add some chilli flex for taste.Then serve it into a bowl.
+                salt.
             </p>
         </div>
         <div class="recipe-title">
@@ -95,6 +95,53 @@
                 flex,salt and clean lentil.Then boil it for 10 mininutes.So,your healthy food is ready.</p>
         </div>
     </section>
+
+    <div class="message-from-atkiya">
+        <h2 class="message-title">Message From Atkiya Fairuz</h2>
+        <p>A healthy diet may contain fruits, vegetables, and whole grains, and may include little to no processed food
+            or
+            sweetened beverages. The requirements for a healthy diet can be met from a variety of plant-based and
+            animal-based
+            foods, although a non-plant source of vitamin B12 is needed for those following a vegan diet. Various
+            nutrition guides
+            are published by medical and governmental institutions to educate individuals on what they should be eating
+            to be
+            healthy. Nutrition facts labels are also mandatory in some countries to allow consumers to choose between
+            foods based on
+            the components relevant to health.If you want to know more about healthy recipe then click here.</p>
+
+        <a class="link-button"
+            href="https://www.delicious.com.au/recipes/collections/gallery/60-healthy-dinners-you-can-cook-in-30-minutes/1vo4q819">Click
+            Here</a>
+    </div>
+
+
+    <section class="fifth-part">
+        <div>
+            <h3>700k</h3>
+            <p>Youtube Subscribers</p>
+        </div>
+
+        <div>
+            <h3>2.4m</h3>
+            <p>Instragram followers</p>
+        </div>
+
+
+        <div>
+            <h3>100k</h3>
+            <p>Dribble Shot likes</p>
+        </div>
+
+
+    </section>
+
+
+
+    <footer class="caption">
+        <h2><span class="red-color">FOOD</span> <span class="caption-2">NETWORK</span></h2>
+        <p class="caption-2">Eat healthy to live healthy.Live healthy to live happy.</p>
+    </footer>
 
 
 
