--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 
     <div class="my-recipe">
         <h2>My Recipes</h2>
-        <p>I will provide some healthy recipes which are good for health.Eating too much is harmful for your health.We
+        <p class="instruction">I will provide some healthy recipes which are good for health.Eating too much is harmful
+            for your health.We
             should not take too much carbohydrate in our daily food menu.If we get more knowledge about healthy food
             then
             we can cook it easily. </p>
@@ -97,7 +98,8 @@
     </section>
 
     <div class="message-from-atkiya">
-        <h2 class="message-title">Message From Atkiya Fairuz</h2>
+        <h2 class="message-title"> Message From Atkiya Fairuz </h2>
+        </h2>
         <p>A healthy diet may contain fruits, vegetables, and whole grains, and may include little to no processed food
             or
             sweetened beverages. The requirements for a healthy diet can be met from a variety of plant-based and
@@ -108,7 +110,8 @@
             to be
             healthy. Nutrition facts labels are also mandatory in some countries to allow consumers to choose between
             foods based on
-            the components relevant to health.If you want to know more about healthy recipe then click here.</p>
+            the components relevant to health.<span class="message-title">If you want to know more about healthy recipe
+                then click here:</span></p>
 
         <a class="link-button"
             href="https://www.delicious.com.au/recipes/collections/gallery/60-healthy-dinners-you-can-cook-in-30-minutes/1vo4q819">Click
